:bug: z-index live chat

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ html, body {
   overflow-x: hidden;
 }
 
+.LiveChat {
+  position: fixed;
+  z-index: 100000;
+}
+
 .Hero {
   position: relative;
   width: 100vw;
